k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quiz-prod
  labels:
    environment: production
    app: quiz-o-meter
